--- a/webapp/index.html
+++ b/webapp/index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<title>app-retention</title>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.min.js"></script>
 
 		<script id="sap-ui-bootstrap"
 			src="resources/sap-ui-core.js"
@@ -18,6 +19,8 @@
 			data-sap-ui-async="true"
 			data-sap-ui-frameOptions="trusted">
 		</script>
+
+
 	</head>
 
 	<body class="sapUiBody">
