[adj] GL Account For PO
[adj] GL Account For PO
[adj] File Key for Attachment

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -7,7 +7,8 @@
 
 		<title>app-retention</title>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.min.js"></script>
-
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.3/jspdf.plugin.autotable.min.js"></script>
+		
 		<script id="sap-ui-bootstrap"
 			src="resources/sap-ui-core.js"
 			data-sap-ui-theme="sap_fiori_3"
@@ -25,6 +26,7 @@
 
 	<body class="sapUiBody">
 		<div data-sap-ui-component data-name="com.apptech.app-retention" data-id="container" data-settings='{"id" : "app-retention"}'></div>
+		<table id="my-table"></table>
 	</body>
 
 </html>
